# up-streamer-rust

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.zenoh-mqtt-amd  Dockerfile.zenoh-mqtt-arm  NOTICE.md  README.md  TRANSPORT_UPGRADE_VALIDATION.md
.cargo/: config.toml
configurable-streamer/: CONFIG.json5  Cargo.toml  Dockerfile.amd  Dockerfile.arm  MQTT_CONFIG.json5  README.md  ZENOH_CONFIG.json5  subscription_data.json
configurable-streamer/src/: config.rs  main.rs
demo/: CMakeLists.txt
demo/src/: main_client.cpp  main_rpc_client.cpp  main_rpc_server.cpp  main_server.cpp  main_server_shmem.cpp
docker/: docker-compose.yaml
example-streamer-implementations/: Cargo.toml  DEFAULT_CONFIG.json5  README.md  ZENOH_CONFIG.json5  subscription_data.json
example-streamer-implementations/docker/: docker-compose.yaml
example-streamer-implementations/docker/config/: CONFIG.json5  ZENOH_CONFIG.json5
example-streamer-uses/: Cargo.toml  README.md  ZENOH_CONFIG.json5
example-streamer-uses/vsomeip-configs/: someip_client.json  someip_publisher.json  someip_subscriber.json
example-utils/example-proto/: Cargo.toml  build.rs
example-utils/example-proto/src/: lib.rs
example-utils/example-up-client-foo/: Cargo.toml
example-utils/example-up-client-foo/src/: lib.rs  up_client_foo.rs
examples/: CMakeLists.txt
inc/: messageBuilder.h  messageParser.h  zenohRpcClient.h  zenohSessionManager.h  zenohUTransport.h
mosquitto/: docker-compose.yaml
plans/: ci-lint-dead-code-fix-plan.md
subscription-cache/: Cargo.toml
subscription-cache/src/: lib.rs
up-linux-streamer/: Cargo.toml  DEFAULT_CONFIG.json5  README.md  ZENOH_CONFIG.json5
up-linux-streamer-plugin/: Cargo.toml  DEFAULT_CONFIG.json5  README.md
up-linux-streamer-plugin/src/: config.rs  lib.rs
up-linux-streamer-plugin/usubscription-static-configs/: testdata.json
up-linux-streamer/examples/: README.md  mE_client.rs  mE_publisher.rs  mE_service.rs  mE_subscriber.rs  uE_client.rs  uE_publisher.rs  uE_service.rs  uE_subscriber.rs
up-linux-streamer/src/: config.rs  main.rs
up-linux-streamer/vsomeip-configs/: mE_publisher.json  point_to_point.json
up-streamer/: Cargo.toml  README.md
up-streamer/benches/: streamer_criterion.rs
up-streamer/src/: benchmark_support.rs  endpoint.rs  lib.rs  route.rs  sender_wrapper.rs  subscription_sync_health.rs  ustreamer.rs  utransport_builder.rs  utransport_router.rs
up-streamer/src/control_plane/: mod.rs  route_lifecycle.rs  route_table.rs  transport_identity.rs
up-streamer/src/data_plane/: egress_pool.rs  egress_worker.rs  ingress_listener.rs  ingress_registry.rs  mod.rs
up-streamer/src/observability/: events.rs  fields.rs  mod.rs
up-streamer/src/routing/: authority_filter.rs  mod.rs  publish_resolution.rs  subscription_cache.rs  subscription_directory.rs  uri_identity_key.rs
up-streamer/src/runtime/: mod.rs  subscription_runtime.rs  worker_runtime.rs
up-streamer/tests/: api_contract_forwarding_rules.rs  single_local_single_remote.rs  single_local_two_remote_add_remove_rules.rs  single_local_two_remote_authorities_different_remote_transport.rs  single_local_two_remote_authorities_same_remote_transport.rs  usubscription.rs
up-streamer/tests/support/: mod.rs
utils/criterion-guardrail/: Cargo.toml
utils/criterion-guardrail/src/: lib.rs  main.rs
utils/criterion-guardrail/tests/: fixture_tree.rs
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/egress_forwarding/single_route_dispatch/ergonomics_baseline/: raw.csv
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/egress_forwarding/single_route_dispatch/ergonomics_candidate/new/: raw.csv
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/ingress_registry/register_route/ergonomics_baseline/: raw.csv
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/ingress_registry/register_route/ergonomics_candidate/new/: raw.csv
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/ingress_registry/unregister_route/ergonomics_baseline/: raw.csv
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/ingress_registry/unregister_route/ergonomics_candidate/new/: raw.csv
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/publish_resolution/source_filter_derivation/ergonomics_baseline/: raw.csv
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/publish_resolution/source_filter_derivation/ergonomics_candidate/new/: raw.csv
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/routing_lookup/exact_authority/ergonomics_baseline/: raw.csv
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/routing_lookup/exact_authority/ergonomics_candidate/new/: raw.csv
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/routing_lookup/wildcard_authority/ergonomics_baseline/: raw.csv
utils/criterion-guardrail/tests/fixtures/criterion-sample-tree/routing_lookup/wildcard_authority/ergonomics_candidate/new/: raw.csv
utils/integration-test-utils/: Cargo.toml
utils/integration-test-utils/src/: integration_test_listeners.rs  integration_test_messages.rs  integration_test_utils.rs  integration_test_uuris.rs  lib.rs  up_client_failing_register.rs  up_client_foo.rs
utils/transport-smoke-suite/: Cargo.toml
utils/transport-smoke-suite/claims/: smoke-zenoh-mqtt-ps-mqtt-publisher-zenoh-subscriber.json  smoke-zenoh-mqtt-ps-zenoh-publisher-mqtt-subscriber.json  smoke-zenoh-mqtt-rr-mqtt-client-zenoh-service.json  smoke-zenoh-mqtt-rr-zenoh-client-mqtt-service.json  smoke-zenoh-someip-ps-someip-publisher-zenoh-subscriber.json  smoke-zenoh-someip-ps-zenoh-publisher-someip-subscriber.json  smoke-zenoh-someip-rr-someip-client-zenoh-service.json  smoke-zenoh-someip-rr-zenoh-client-someip-service.json
utils/transport-smoke-suite/src/: claims.rs  env.rs  lib.rs  logs.rs  process.rs  report.rs  scenario.rs
utils/transport-smoke-suite/tests/: fixture_audit.rs  scenario_contracts.rs
utils/usubscription-static-file/: Cargo.toml
utils/usubscription-static-file/src/: lib.rs
(+67 files in other folders)
