# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "example-streamer-uses",
    "utils/hello-world-protos",
    "utils/integration-test-utils",
    "example-streamer-implementations", "up-linux-streamer-plugin",
    "up-streamer", "subscription-cache", "utils/usubscription-static-file"]

[workspace.package]
rust-version = "1.76.0"
version = "0.1.0"
repository = "https://github.com/eclipse-uprotocol/up-streamer-rust"
homepage = "https://github.com/eclipse-uprotocol"
edition = "2021"
keywords = ["uProtocol", "SDV", "routing", "streamer"]
license = "Apache-2.0"

[workspace.dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = { version = "0.1" }
clap = { version = "4.5" }
env_logger = { version = "0.10.1" }
futures = { version = "0.3.30" }
lazy_static = { version = "1.5.0" }
log = { version = "0.4.20" }
json5 = { version =  "0.4.1" }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.94" }
uuid = { version = "1.7.0" }
tokio = { version = "1.35.1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "time"] }
protobuf = { version = "3.3", features = ["with-bytes"] }
up-rust = { version = "0.2.0", default-features = false }
up-transport-zenoh = { version = "0.3.0" }
up-transport-vsomeip = { git = "https://github.com/eclipse-uprotocol/up-transport-vsomeip-rust.git", tag = "v0.3.0", default-features = false }
up-transport-mqtt5 = { version = "0.1.0" }
zenoh = { version = "1.0.0", features = ["default", "plugins"] }
zenoh-core = { version = "1.0.0" }
zenoh-plugin-trait = { version = "1.0.0" }
zenoh-result = { version = "1.0.0" }
zenoh-util = { version = "1.0.0" }
zenoh_backend_traits = { version = "1.0.0" }

[profile.dev]
debug = true
opt-level = 0

[profile.fast]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
