# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "example-streamer-uses",
    "utils/hello-world-protos",
    "utils/integration-test-utils",
    "example-streamer-implementations",
    "configurable-streamer",
    "up-linux-streamer-plugin",
    "up-streamer",
    "subscription-cache",
    "utils/usubscription-static-file",
]

[workspace.package]
rust-version = "1.88"
version = "0.1.0"
repository = "https://github.com/eclipse-uprotocol/up-streamer-rust"
homepage = "https://github.com/eclipse-uprotocol"
edition = "2021"
keywords = ["uProtocol", "SDV", "routing", "streamer"]
license = "Apache-2.0"

[workspace.dependencies]
async-trait = { version = "0.1" }
clap = { version = "4.5" }
futures = { version = "0.3.30" }
lazy_static = { version = "1.5.0" }
json5 = { version = "0.4.1" }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.94" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.7.0" }
tokio = { version = "1.44", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
protobuf = { version = "3.7.2", features = ["with-bytes"] }
up-rust = { version = "0.9", default-features = false }
up-transport-zenoh = { version = "0.9.0" }
up-transport-vsomeip = { git = "https://github.com/eclipse-uprotocol/up-transport-vsomeip-rust", rev = "278ab26415559d6cb61f40facd21de822032cc83", default-features = false }
up-transport-mqtt5 = { version = "0.4.0" }
zenoh = { version = "1.2.1", features = [
    "default",
    "plugins",
    "unstable",
    "internal",
] }
zenoh-core = { version = "1.2.1" }
zenoh-plugin-trait = { version = "1.2.1" }
zenoh-result = { version = "1.2.1" }
zenoh-util = { version = "1.2.1" }

[profile.dev]
debug = true
opt-level = 0

[profile.fast]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
