# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "up-linux-streamer"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[[bin]]
name = "zenoh_someip"
required-features = ["zenoh-transport", "vsomeip-transport"]

[[bin]]
name = "zenoh_mqtt"
required-features = ["zenoh-transport", "mqtt-transport"]

[features]
default = []
zenoh-transport = ["up-transport-zenoh", "zenoh"]
mqtt-transport = ["up-transport-mqtt5"]
vsomeip-transport = ["up-transport-vsomeip"]
bundled-vsomeip = ["up-transport-vsomeip/bundled"]

[dependencies]
async-trait = { workspace = true }
chrono = { version = "0.4" }
clap = { version = "4.5.9", features = ["derive"] }
env_logger = { version = "0.10.2" }
log = { workspace = true }
json5 = { workspace = true }
protobuf = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
up-rust = { workspace = true }
up-streamer = { path = "../up-streamer" }
up-transport-zenoh = { workspace = true, optional = true }
up-transport-vsomeip = { workspace = true, optional = true }
up-transport-mqtt5 = { workspace = true, optional = true }
zenoh = { workspace = true, optional = true }
usubscription-static-file = {path = "../utils/usubscription-static-file"}

[dev-dependencies]
hello-world-protos = { path = "../utils/hello-world-protos" }
