# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "up-linux-streamer-plugin"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[features]
default = ["dynamic_plugin"]
zenoh-transport = [
    "up-transport-zenoh",
    "zenoh",
    "zenoh-core",
    "zenoh-plugin-trait",
    "zenoh-result",
    "zenoh-util",
]
vsomeip-transport = ["up-transport-vsomeip"]
bundled-vsomeip = ["up-transport-vsomeip/bundled"]
dynamic_plugin = []

[lib]
# When auto-detecting the "up_linux_streamer" plugin, `zenohd` will look for a dynamic library named "zenoh_plugin_up_linux_streamer"
# `zenohd` will expect the file to be named according to OS conventions:
#   - libzenoh_plugin_up_linux_streamer.so on linux
#   - libzenoh_plugin_up_linux_streamer.dylib on macOS
#   - zenoh_plugin_up_linux_streamer.dll on Windows
name = "zenoh_plugin_up_linux_streamer"
# This crate type will make `cargo` output a dynamic library instead of a rust static library
crate-type = ["cdylib"]

[dependencies]
const_format = "0.2.30"
futures = { version = "0.3.25" }
git-version = { version = "0.3.5" }
tracing = { version = "0.1" }
tracing-subscriber = { workspace = true }
serde = { version = "1.0.154" }
serde_json = { version = "1.0.94" }
tokio = { version = "1.35.1", default-features = false }
up-rust = { workspace = true }
up-transport-zenoh = { workspace = true, optional = true }
up-transport-vsomeip = { workspace = true, optional = true }
up-streamer = { path = "../up-streamer" }
usubscription-static-file = { path = "../utils/usubscription-static-file" }
zenoh = { workspace = true, optional = true }
zenoh-core = { workspace = true, optional = true }
zenoh-plugin-trait = { workspace = true, optional = true }
zenoh-result = { workspace = true, optional = true }
zenoh-util = { workspace = true, optional = true }
