# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "up-streamer"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
up-rust = { workspace = true, features = ["usubscription"] }
protobuf = { version = "3.3", features = ["with-bytes"] }
arc-swap = "1.7"

[dev-dependencies]
async-broadcast = { version = "0.7.0" }
chrono = { version = "0.4.31", features = [] }
criterion = { version = "0.5.1", features = ["csv_output"] }
futures = { workspace = true }
integration-test-utils = { path = "../utils/integration-test-utils" }
tokio-condvar = { version = "0.3.0" }
usubscription-static-file = { path = "../utils/usubscription-static-file" }
