[package]
name = "example-up-client-foo"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = { version = "0.7.0" }
async-std = { workspace = true }
async-trait = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
up-rust = { workspace = true }
up-streamer = { path = "../../up-streamer" }
