[package]
name = "criterion-guardrail"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4.39", default-features = true, features = ["clock"] }
clap = { workspace = true, features = ["derive"] }
csv = { version = "1.3.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
walkdir = { version = "2.5.0" }

[dev-dependencies]
tempfile = { version = "3.14.0" }
